			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.02k: *********************************

BUG: (04/12/05, SMR) IRSIM results are different than other IRSIM implementations (Bug #248).
FIX: In Sim.java, include transistors only once.

IMP: (04/11/05, SMR) GDS input and output now handles pin layers correctly.

IMP: (04/11/05, SMR) Added checking in NodeInst.newInstance().

BUG/MAN: (04/11/05, SMR) JELIB I/O doesn't handle null pointers.
FIX: New attribute type "X" for null objects.

BUG: (04/11/05, GVG) Wrong scale for schematic capacitors in IRSIM (Bug #249)
FIX: Dividing value by 1e-15 to convert it into Femto units.

IMP: (04/11/05, DN) Global-Partition schematic primitive is handled by NetworkTool.
     Added method "Netlist.getNetwork(Nodable, Global) to check globals of subcells.

IMP/MAN: (04/08/05, GVG) Title in default technology frame title in TechnologyTab was changed. This
required a change in manual.

BUG: (04/07/05, SMR) Technology editing layer bit selection works now (Bug #243).
FIX: In Highligher.findAllInArea(), do not add 0.4 units of slop to selection.

BUG: (04/07/05, SMR) Editing text "in-place" now draws a large enough editing area (Bug #236).
FIX: In GetInfoText.EditInPlaceListener.figureSize(), use the logical bounds of the glyph.

IMP: (04/07/05, SMR) Explorer window no longer opens to current library when jobs change (Bug #244).

BUG: (04/07/05, GVG) GDS export was crashing if non-layout layers were found in cell such as art nodes
FIX: Skipping those layers

BUG: (04/07/05, GVG) No writing resistance if value is smaller than minimum in parasitics extraction
FIX: Writes 0 instead

BUG: (04/06/05, GVG) Parasitic tool was wrongly ignoring active layers in HierarchyEnumator call
FIX: Use correct netlist

BUG: (04/06/05, SMR) IRSIM crashes (Bug #242).
FIX: In Sim.connectTransistors(), use "baseType()" when extracting node type.
